--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,14 +18,14 @@ services:
     ports:
       - 5432:5432
     environment:
-     POSTGRES_USER: postgres
-     POSTGRES_DB: cer3
-     POSTGRES_PASSWORD: miau123.
+      POSTGRES_USER: postgres
+      POSTGRES_DB: cer3
+      POSTGRES_PASSWORD: miau123.
     
   react:
     container_name: cer3_react
     build: 
-      context: /Users/alonsodicandia/UFSM/cer3-ldp/react
+      context: C:\Users\felip\Desktop\cer_2\cer3-ldp\react
       dockerfile: Dockerfile
     command: npm start
     volumes:
