--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
   react:
     container_name: cer3_react
     build: 
-      context: C:\Users\felip\Desktop\cer_2\cer3-ldp\react
+      context: ./react
       dockerfile: Dockerfile
     command: npm start
     volumes:
